--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "babel-preset-stage-0": "^6.1.2",
     "babel-runtime": "^5.8.0",
     "css-loader": "^0.23.0",
-    "style-loader": "^0.13.0",
-    "vue-loader": "^7.3.0",
-    "vue-html-loader": "^1.0.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.13.2",
     "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^7.3.0",
     "webpack": "^1.12.2"
   },
   "author": "James Osborne"
